--- a/index.html
+++ b/index.html
@@ -33,16 +33,21 @@
         .shaka-settings-menu button:hover {
             background-color: rgb(45, 45, 45);
         }
+
+        /* Ensure video fills screen like before */
         video {
             width: 100%;
             height: 100%;
             object-fit: cover;
-            max-width: 100%;
-            max-height: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: -1; /* Keep video behind other content */
         }
     </style>
 </head>
 <body bgcolor="black" style="margin:0">
+
     <center>
         <div data-shaka-player-container style="position:absolute; top:0; left:0; width:100%; height:100%; object-fit:cover">
             <video id="video" autoplay muted style="width:100%; height:100%" 
@@ -51,19 +56,48 @@
     </center>
 
     <script>
+        async function getDRMKey(user) {
+            try {
+                const response = await fetch(`http://localhost:3000/get-drm-key?user=${user}`);
+                const data = await response.json();
+                if (data.drmKey) {
+                    return data.drmKey;
+                } else {
+                    throw new Error('Unauthorized access');
+                }
+            } catch (error) {
+                console.error('Error fetching DRM key:', error);
+                return null;
+            }
+        }
+
         async function init() {
+            // Replace 'user1' with the actual username after authentication
+            const drmKey = await getDRMKey('user1');
+            if (!drmKey) {
+                alert('Failed to load DRM key!');
+                return;
+            }
+
+            // Get the video element
             let video = document.getElementById("video");
+
+            // Initialize the Shaka Player with the video element
             let player = new shaka.Player(video);
+
+            // Initialize UI controls
             let ui = new shaka.ui.Controls(video, player);
 
+            // Configure the player (optional, for DRM or other settings)
             player.configure({
                 drm: {
                     clearKeys: {
-                        "2621df523d47739fdf58ef0ce68f4c27": "98139d5b94e8228bb1bc7e3074013a72" // Placeholder for DRM key
+                        "2621df523d47739fdf58ef0ce68f4c27": drmKey.split(":")[1] // Using the dynamic DRM key
                     }
                 }
             });
 
+            // Configure the UI (controls)
             ui.configure({
                 controlPanelElements: ["play_pause", "mute", "volume", "spacer", "time_and_duration", "quality", "fullscreen", "overflow_menu"],
                 volumeBarColors: {
@@ -77,8 +111,10 @@
                 }
             });
 
+            // Event listener for errors
             player.addEventListener("error", onPlayerErrorEvent);
 
+            // Load the video
             try {
                 const videoURL = "https://abgqjfuaaaaaaaamcswtescdjn66h.0eee773031d3434d8c65ff46ac9a6070.emt.cf.ww.aiv-cdn.net/pdx-nitro/live/clients/dash/enc/wn4ivz5ch0/out/v1/ecce90775f6c427b8e7f98eef4157e04/cenc.mpd";
                 await player.load(videoURL);
