--- a/index.html
+++ b/index.html
@@ -35,17 +35,6 @@
         .shaka-settings-menu button:hover {
             background-color: rgb(45, 45, 45);
         }
-
-        /* Ensure the video fits the screen */
-        video {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            position: absolute;
-            top: 0;
-            left: 0;
-            z-index: -1; /* Keeps the video behind other content */
-        }
     </style>
 </head>
 <body bgcolor="black" style="margin:0">
@@ -59,25 +48,19 @@
 
     <script>
         async function init() {
-            // Get the video element
             let video = document.getElementById("video");
+            let ui = video.ui;
+            let controls = ui.getControls();
+            let player = controls.getPlayer();
 
-            // Initialize the Shaka Player
-            let player = new shaka.Player(video);
-
-            // Initialize UI controls
-            let ui = new shaka.ui.Controls(video, player);
-
-            // Configure DRM keys (use the provided keys)
             player.configure({
                 drm: {
                     clearKeys: {
-                        "2621df523d47739fdf58ef0ce68f4c27": "98139d5b94e8228bb1bc7e3074013a72" // Replace with new keys
+                        "2621df523d47739fdf58ef0ce68f4c27":"98139d5b94e8228bb1bc7e3074013a72" // New clear key pair
                     }
                 }
             });
 
-            // UI configuration
             ui.configure({
                 controlPanelElements: ["play_pause", "mute", "volume", "spacer", "time_and_duration", "quality", "fullscreen", "overflow_menu"],
                 volumeBarColors: {
@@ -95,12 +78,11 @@
             window.ui = ui;
 
             player.addEventListener("error", onPlayerErrorEvent);
-            ui.addEventListener("error", onUIErrorEvent);
+            controls.addEventListener("error", onUIErrorEvent);
 
-            // Load the new video URL (MPD)
             try {
-                const videoURL = "https://abgqjfuaaaaaaaamcswtescdjn66h.0eee773031d3434d8c65ff46ac9a6070.emt.cf.ww.aiv-cdn.net/pdx-nitro/live/clients/dash/enc/wn4ivz5ch0/out/v1/ecce90775f6c427b8e7f98eef4157e04/cenc.mpd";
-                await player.load(videoURL);
+                // Updated MPD URL with no line breaks
+                await player.load("https://abgqjfuaaaaaaaamcswtescdjn66h.0eee773031d3434d8c65ff46ac9a6070.emt.cf.ww.aiv-cdn.net/pdx-nitro/live/clients/dash/enc/wn4ivz5ch0/out/v1/ecce90775f6c427b8e7f98eef4157e04/cenc.mpd");
                 console.log("The video has now been loaded!");
             } catch (error) {
                 onPlayerError(error);
@@ -127,7 +109,6 @@
             window.open("https://t.me/+e6G48oujQuExOTg1");
         }
 
-        // Event listeners for Shaka UI
         document.addEventListener("shaka-ui-loaded", init);
         document.addEventListener("shaka-ui-load-failed", initFailed);
 
